# handler/response.go
@@ -1,0 +1,25 @@
+package handler
+
+import "github.com/TPM-Project-Larces/back-end.git/schemas"
+
+type CreateUserResponse struct {
+	Message string               `bson:"message"`
+	Data    schemas.UserResponse `bson:"data"`
+}
+
+type DeleteUserResponse struct {
+	Message string               `bson:"message"`
+	Data    schemas.UserResponse `bson:"data"`
+}
+type ShowUserResponse struct {
+	Message string               `bson:"message"`
+	Data    schemas.UserResponse `bson:"data"`
+}
+type ListUsersResponse struct {
+	Message string                 `bson:"message"`
+	Data    []schemas.UserResponse `bson:"data"`
+}
+type UpdateUserResponse struct {
+	Message string               `bson:"message"`
+	Data    schemas.UserResponse `bson:"data"`
+}
